--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.4.0"
+coil = "2.4.0"
 converterMoshi = "2.9.0"
 fragmentKtx = "1.4.1"
 kotlin = "1.9.0"
@@ -14,7 +15,7 @@ lifecycleRuntimeKtx = "2.4.1"
 material = "1.10.0"
 activity = "1.9.0"
 constraintlayout = "2.1.4"
-moshiKotlinCodegen = "1.13.0"
+moshiKotlinCodegen = "1.15.1"
 okhttp = "4.9.3"
 recyclerview = "1.2.1"
 
@@ -24,6 +25,7 @@ androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
+coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "converterMoshi" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
